--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -2,4 +2,5 @@
 <text class="home-text">Hello World</text>
 <button class="home-button" size="mini">按钮</button>
 
-
+<view>1、知识点1</view>
+<view>test</view>
